# cs425_mp3

./: .clang-format  ANY_VM_CAN_CREATE.md  CMakeLists.txt  CRITICAL_DEBUGGING_STEPS.md  DEBUG_OUTPUT_ADDED.md  DEPLOYMENT_GUIDE.md  DETAILED_SEND_DEBUG.md  FILE_MESSAGE_ROUTING_FIX.md  FINAL_SUMMARY.md  HYDFS_USAGE.md  IMPLEMENTATION_SUMMARY.md  LINUX_BUILD_FIX.md  MP3_STRUCTURES_SUMMARY.md  Makefile  QUICK_START.md  README.md  README_HYDFS.md  SYNCHRONOUS_REPLICATION.md  VM_BUILD_INSTRUCTIONS.md  debug_build.sh  deploy_and_launch.sh  init_build.sh  kill_all.sh  manual_commands.sh  setup_vms.sh  simple_deploy.sh  ssh_to_vm.sh  test_3vms.sh  test_hydfs.sh  tmux_launch.sh
include/: client_tracker.hpp  consistent_hash_ring.hpp  file_block.hpp  file_metadata.hpp  file_operations_handler.hpp  file_store.hpp  node.hpp  socket.hpp
src/: client_tracker.cpp  consistent_hash_ring.cpp  file_block.cpp  file_message.cpp  file_metadata.cpp  file_operations_handler.cpp  file_store.cpp  main.cpp  membership_list.cpp  node.cpp
test_files/: append1.txt  append2.txt  test1.txt  test3.txt
tests/: test_message.cpp
